--- a/css/listicle-style.css
+++ b/css/listicle-style.css
@@ -1,3 +1,118 @@
 /**
  TODO(you): Write the CSS necessary to complete HW1!
 */
+
+body{
+  margin: 0;
+  padding: 0;
+  font-family: monospace sans-serif;
+  /* font-family:sans-serif; */
+}
+.row{
+  display: flex;
+}
+.blue{
+  color: blue;
+}
+.small{
+  font-size: 12px
+}
+.number{
+  margin-top: 60px;
+  color: rgba(0, 0, 0, 0.25);
+  font-family: 'Roboto Slab' serif;
+  font-size: 36px;
+  font-weight: bold;
+}
+header{
+  height: 500px;
+  /* background-image: url("../images/header.jpg"); */
+  background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)), url(../images/header.jpg);
+  background-size: cover;
+  background-position: top;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.title{
+  font-size: 36px;
+  font-weight: normal;
+  font-family: "Roboto Slab" serif;
+  max-width: 780px;
+  color: white;
+}
+.f-column{
+  flex-direction: column;
+}
+.text-center{
+  text-align: center;
+}
+.profile{
+  display: flex;
+  align-items: center;
+  transform: translateY(-50px);
+  margin-bottom: -50px;
+
+}
+.profile_img{
+  display: block;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  border: 1px solid white
+}
+.profile_txt{
+  font-family: "Source Sans Pro";
+  font-size: 18px;
+  line-height: 24px;
+  color: rgb(51, 51, 51);
+}
+.author_txt{
+  font-weight: bold;
+}
+.update_date{
+  display: block;
+  border-bottom: 2px solid #e6e6e6;
+}
+.content{
+  /* width: 66.7%; */
+  max-width: 66.7%;
+  margin: 0 auto;
+}
+.beverage{
+  margin-top: 60px;
+  margin-bottom: 60px;
+  padding-left: 40px;
+}
+.beverage>div{
+  margin: 0 0 20px 0;
+}
+.beverage-img{
+  width: 100%;
+  /* height: 600px; */
+}
+.b-context>p{
+  line-height: 32px;
+  font-family: 'Source Sans Pro' 'sans-serif';
+  font-size: 18px;
+  color: rgb(51, 51, 51);
+}
+.b-header>*{
+  margin: 0;
+}
+.b-title{
+  font-family: 'Roboto Slab' serif;
+  font-size: 36px;
+  font-weight: bold;
+  color: rgb(51, 51, 51);
+}
+.b-link{
+  color: #42b4d6;
+  text-decoration: none;
+  outline: none;
+}
+.b-link:hover{
+  text-decoration: underline;
+}
