--- a/css/my-list-style.css
+++ b/css/my-list-style.css
@@ -1,3 +1,154 @@
 /**
  TODO(you): Add CSS for the list that you create yourself!
 */
+body{
+  padding: 0px;
+  margin: 0px;
+}
+@keyframes testAni {
+  0%{
+    height: 0vh;
+  }
+  50%{
+    height: 40vh;
+  }
+  100%{
+    height: 100vh;
+  }
+  /* 0% { margin-top: 0px; background-color: yellow;}
+ 50% { margin-top: 50px; background-color: red; }
+ 100% { margin-top: 100px; background-color: blue; } */
+
+}
+.img1{
+  background-image: url("../images/1.jpg");
+}
+.img2{
+  background-image: url("../images/2.jpg");
+}
+.img3{
+  background-image: url("../images/3.jpg");
+}
+.img4{
+  background-image: url("../images/4.jpg");
+}
+.parallax{
+  height: 1200px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  background-attachment: fixed;
+}
+
+.title{
+  background-image: url("../images/header1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  height: 100vh;
+  /* animation-name:  */
+  /* animation: testAni 1s; */
+  /* animation-delay: 3s; */
+  text-align: center;
+  color: white;
+  font-size: 36px;
+}
+.align-content-center{
+  /* align-content: center; */
+  align-items: center;
+  /* align-content: center; */
+  /* align-self: center; */
+}
+.justify-content-center{
+  justify-content: center;
+}
+.flex{
+  display: flex;
+}
+img{
+  display: block;
+}
+.test{
+  width: 60px;
+  height: 60px;
+  background-color: wheat;
+  /* animation: testAni 5s ease 0s infinite alternate;; */
+
+}
+.slide-animation{
+  animation: animationFrames ease 1s;
+  animation-iteration-count: 1;
+  transform-origin: 50% 50%;
+  animation-fill-mode:forwards; /*when the spec is finished*/
+  -webkit-animation: animationFrames ease 1s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-transform-origin: 50% 50%;
+  -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/
+  -moz-animation: animationFrames ease 1s;
+  -moz-animation-iteration-count: 1;
+  -moz-transform-origin: 50% 50%;
+  -moz-animation-fill-mode:forwards; /*FF 5+*/
+  -o-animation: animationFrames ease 1s;
+  -o-animation-iteration-count: 1;
+  -o-transform-origin: 50% 50%;
+  -o-animation-fill-mode:forwards; /*Not implemented yet*/
+  -ms-animation: animationFrames ease 1s;
+  -ms-animation-iteration-count: 1;
+  -ms-transform-origin: 50% 50%;
+  -ms-animation-fill-mode:forwards; /*IE 10+*/
+}
+
+@keyframes animationFrames{
+  0% {
+    opacity:0;
+    transform:  translate(0px,-25px)  ;
+  }
+  100% {
+    opacity:1;
+    transform:  translate(0px,0px)  ;
+  }
+}
+
+@-moz-keyframes animationFrames{
+  0% {
+    opacity:0;
+    -moz-transform:  translate(0px,-25px)  ;
+  }
+  100% {
+    opacity:1;
+    -moz-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-webkit-keyframes animationFrames {
+  0% {
+    opacity:0;
+    -webkit-transform:  translate(0px,-25px)  ;
+  }
+  100% {
+    opacity:1;
+    -webkit-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-o-keyframes animationFrames {
+  0% {
+    opacity:0;
+    -o-transform:  translate(0px,-25px)  ;
+  }
+  100% {
+    opacity:1;
+    -o-transform:  translate(0px,0px)  ;
+  }
+}
+
+@-ms-keyframes animationFrames {
+  0% {
+    opacity:0;
+    -ms-transform:  translate(0px,-25px)  ;
+  }
+  100% {
+    opacity:1;
+    -ms-transform:  translate(0px,0px)  ;
+  }
+}
