--- a/css/listicle-style.css
+++ b/css/listicle-style.css
@@ -26,7 +26,6 @@ body{
 }
 header{
   height: 500px;
-  /* background-image: url("../images/header.jpg"); */
   background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)), url(../images/header.jpg);
   background-size: cover;
   background-position: top;
@@ -39,7 +38,7 @@ header{
 .title{
   font-size: 36px;
   font-weight: normal;
-  font-family: "Roboto Slab" serif;
+  font-family: 'Roboto Slab' serif;
   max-width: 780px;
   color: white;
 }
