--- a/css/my-list-style.css
+++ b/css/my-list-style.css
@@ -5,21 +5,6 @@ body{
   padding: 0px;
   margin: 0px;
 }
-@keyframes testAni {
-  0%{
-    height: 0vh;
-  }
-  50%{
-    height: 40vh;
-  }
-  100%{
-    height: 100vh;
-  }
-  /* 0% { margin-top: 0px; background-color: yellow;}
- 50% { margin-top: 50px; background-color: red; }
- 100% { margin-top: 100px; background-color: blue; } */
-
-}
 .img1{
   background-image: url("../images/1.jpg");
 }
@@ -33,7 +18,7 @@ body{
   background-image: url("../images/4.jpg");
 }
 .parallax{
-  height: 1200px;
+  height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
@@ -46,18 +31,12 @@ body{
   background-size: cover;
 
   height: 100vh;
-  /* animation-name:  */
-  /* animation: testAni 1s; */
-  /* animation-delay: 3s; */
   text-align: center;
   color: white;
   font-size: 36px;
 }
 .align-content-center{
-  /* align-content: center; */
   align-items: center;
-  /* align-content: center; */
-  /* align-self: center; */
 }
 .justify-content-center{
   justify-content: center;
@@ -72,7 +51,6 @@ img{
   width: 60px;
   height: 60px;
   background-color: wheat;
-  /* animation: testAni 5s ease 0s infinite alternate;; */
 
 }
 .slide-animation{
@@ -151,4 +129,10 @@ img{
     opacity:1;
     -ms-transform:  translate(0px,0px)  ;
   }
+}
+.blur{
+  filter: blur(3px);
+}
+.clear{
+    width: 100vw;
 }
